--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,11 @@
     "x-data-spreadsheet": "^1.1.9",
     "xlsx": "^0.18.5"
   },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.10"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
